# mlx_embedding_models

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mlx_embedding_models/: __init__.py  clip_model.py  embedding.py  load_utils.py  model.py  nomic_model.py  registry.py
